--- a/templates/index.html
+++ b/templates/index.html
@@ -4,15 +4,18 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
     <title>Info windows</title>
-    <link rel="stylesheet" type="text/css" href="static/css/reset.css">
-    <link rel="stylesheet" href="static/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/reset.css">
+    <link rel="stylesheet" href="/static/css/styles.css">
+    <script src="/static/lib/angular/angular.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script>
   </head>
-  <body>
+  <body ng-app="app">
     <div class="header">
       <h1 class="title">Plan your route!</h1>
     </div>
-    <div class="main-map" id="map-canvas"></div>
+    <div ng-controller="MapCtrl">
+      <div class="main-map" id="map-canvas"></div>
+    </div>
     <div class="footer">
       <p>Made with love.</p>
     </div>
