--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,6 @@
     <title>Info windows</title>
     <link rel="stylesheet" type="text/css" href="/static/css/reset.css">
     <link rel="stylesheet" href="/static/css/styles.css">
-    <script src="/static/lib/angular/angular.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script>
   </head>
   <body ng-app="app">
     <div class="header">
@@ -19,6 +17,12 @@
     <div class="footer">
       <p>Made with love.</p>
     </div>
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.23/angular.min.js"></script>
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.23/angular-route.min.js"></script>
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.23/angular-touch.min.js"></script>
+    <script type="text/javascript" src="/static/lib/angular/angular-google-maps.min.js"></script>
+    <script type="text/javascript" src="//maps.googleapis.com/maps/api/js?key=AIzaSyD_DEud0IbgAZ4M0H7lxQDfYGnw3LrEGzE&libraries=places"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="static/js/scripts.js"></script>
   </body>
 </html>
