--- a/templates/index.html
+++ b/templates/index.html
@@ -4,57 +4,41 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
     <title>Info windows</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/static/css/reset.css">
     <link rel="stylesheet" href="/static/css/styles.css">
   </head>
+
   <body ng-app="app">
     <div ng-controller="MapCtrl">
+
       <div class="main-map" id="map-canvas"></div>
-      <div class="header">
-        <h1 class="title">Tour Link</h1>
-        <h2 class="city-subhead">Providence, RI</h1>
+        <div id="control-panel">
+          <img src="/static/img/tourlink-logo-01.png" id="logo">
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-lg">
+          <button class="main-button">START</button>
       </div>
-      <div class="divider">&nbsp;</div>
-      <div class="landmark-choices">
-        <ul>
-          <li ng-repeat="landmark in dataPoints.landmarks">
-            <div class="landmark-thumb">
-              <img ng-src="{{ landmark.photo }}"/>
-            </div>
-            <div class="landmark-name">
-              {{ landmark.name }}
-              <div class="landmark-popover-wrapper">
-                <div class="landmark-popover-content">
-                  {{ landmark.description }}
-                </div>
-              </div>
-            </div>
-            <button class="add-to-tour">Add to tour</button>
-          </li>
-        </ul>
+
+      <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+          <div class="modal-content">
+            <p>sup bitch</p>
+          </div>
+        </div>
       </div>
-      <div class="landmark-ordering">
-        <ul>
-          <li ng-repeat="landmark in dataPoints.landmarks">
-            index
-            {{ landmark.name }}
-          </li>
-        </ul>
-      </div>
-      <button class="confirm populate-map" ng-click="populateMap()" type="button">Confirm My Trip</button>
-      <div class="right-column">
-        <h1>My Tour</h1>
-      </div>
+
+
     </div>
-    <div class="footer">
-      <p>Made with love.</p>
-    </div>
+      
+
+    <!-- scripts -->
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.23/angular.min.js"></script>
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.23/angular-route.min.js"></script>
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.23/angular-touch.min.js"></script>
     <script type="text/javascript" src="/static/lib/angular/angular-google-maps.min.js"></script>
     <script type="text/javascript" src="//maps.googleapis.com/maps/api/js?key=AIzaSyD_DEud0IbgAZ4M0H7lxQDfYGnw3LrEGzE&libraries=places"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
     <script src="static/js/scripts.js"></script>
   </body>
 </html>
