style next destination

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -35,6 +35,10 @@ html, body {
   z-index: 100;
 }
 
+.landmark-ordering ul li:first-child {
+  color: green;
+}
+
 .main-button {
   background: orange;
   position: fixed;
