--- a/templates/index.html
+++ b/templates/index.html
@@ -68,17 +68,26 @@
         </div>
       </div>
 
-      <!-- First Destination Uber Alert Modal Content -->
-      <div class="modal fade initial-uber-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+      <!-- Uber Cost Modal Content -->
+      <div class="modal fade uber-cost-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg">
           <div class="modal-content">
-            <p>Uber is on the way</p>
+            <p>Uber is on the way to bringing you to your next destination: {{ queuedLandmarks[0].name }}</p>
           </div>
         </div>
       </div>
 
-      <!-- Next Destination Uber Alert Modal Content -->
-      <div class="modal fade next-uber-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+      <!-- First Destination Uber Alert Modal Content -->
+      <div class="modal fade initial-uber-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+          <div class="modal-content">
+            <p>Uber is on the way to bringing you to your next destination: {{ queuedLandmarks[0].name }}</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Arrival Modal Content -->
+      <div class="modal fade arrival-uber-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg">
           <div class="modal-content">
             <p>Uber is on the way to bringing you to your next destination: {{ queuedLandmarks[0].name }}</p>
