key-triggered modals

--- a/templates/index.html
+++ b/templates/index.html
@@ -72,7 +72,7 @@
       <div class="modal fade uber-cost-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg">
           <div class="modal-content">
-            <p>Uber is on the way to bringing you to your next destination: {{ queuedLandmarks[0].name }}</p>
+            <p>Uber is expensive today.</p>
           </div>
         </div>
       </div>
@@ -90,7 +90,7 @@
       <div class="modal fade arrival-uber-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg">
           <div class="modal-content">
-            <p>Uber is on the way to bringing you to your next destination: {{ queuedLandmarks[0].name }}</p>
+            <p>You have arrived!</p>
           </div>
         </div>
       </div>
