--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
       <!-- Control Panel -->
       <div id="control-panel">
         <img src="/static/img/tourlink-logo-01.png" id="logo">
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-lg"></button>
+        <button type="button" class="trip-add btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-lg">+ Add to Trip</button>
 
         <h1>Current Trip:</h1>
         <div class="landmark-ordering">
