uber cost calculation

--- a/templates/index.html
+++ b/templates/index.html
@@ -75,7 +75,9 @@
       <div class="modal fade uber-cost-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg">
           <div class="modal-content">
+            <div class="todays-price">{{ todaysPrice }}</div>
             <p>Uber is expensive today.</p>
+            <button type="button" class="uber-accept btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-lg">Proceed</button>
           </div>
         </div>
       </div>
