--- a/templates/index.html
+++ b/templates/index.html
@@ -76,8 +76,8 @@
         <div class="modal-dialog modal-lg">
           <div class="modal-content">
             <div class="todays-price">{{ todaysPrice }}</div>
-            <p>Uber is expensive today.</p>
-            <button type="button" class="uber-accept btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-lg">Proceed</button>
+            <p class="price-dialog">Uber is not bad today.</p>
+            <button type="button" class="uber-accept btn btn-primary" data-toggle="modal" data-target="">Proceed</button>
           </div>
         </div>
       </div>
