--- a/templates/index.html
+++ b/templates/index.html
@@ -86,7 +86,8 @@
       <div class="modal fade initial-uber-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg">
           <div class="modal-content">
-            <p>Uber is on the way to bringing you to your next destination: {{ queuedLandmarks[0].name }}</p>
+            <p class="next-dest-text">Uber is on the way to bringing you to your next destination:</p>
+            <p class="next-dest-name">{{ queuedLandmarks[0].name }}</p>
           </div>
         </div>
       </div>
