--- a/templates/index.html
+++ b/templates/index.html
@@ -76,7 +76,7 @@
         <div class="modal-dialog modal-lg">
           <div class="modal-content">
             <div class="todays-price">{{ todaysPrice }}</div>
-            <p class="price-dialog">Uber is not bad today.</p>
+            <p class="price-dialog">Not bad.</p>
             <button type="button" class="uber-accept btn btn-primary" data-toggle="modal" data-target=".initial-uber-modal-lg">Proceed</button>
           </div>
         </div>
@@ -86,7 +86,7 @@
       <div class="modal fade initial-uber-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg">
           <div class="modal-content">
-            <p class="next-dest-text">Uber is on the way to bringing you to your next destination:</p>
+            <p class="next-dest-text">Your chauffeur is on the way to bring you to your next destination:</p>
             <p class="next-dest-name">{{ queuedLandmarks[0].name }}</p>
             <button type="button" class="uber-dismiss btn btn-primary" data-toggle="modal" data-target="">Dismiss</button>
           </div>
