change start modal to show price

--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
           </ul>
         </div>
 
-        <button type="button" class="main-button" data-toggle="modal" data-target=".initial-uber-modal-lg" ng-click="populateMap()">START</button>
+        <button type="button" class="main-button" data-toggle="modal" data-target=".uber-cost-modal-lg" ng-click="populateMap()">START</button>
       </div>
 
       <!-- Add Destination Modal Content -->
